--- a/SEM-05-PHP/html & js/js-01.html
+++ b/SEM-05-PHP/html & js/js-01.html
@@ -1,4 +1,4 @@
-<!-- Area of circle -->
+<!-- Area & Circumference of circle -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,7 +9,9 @@
 		rad = prompt("Enter the Radius");
 		confirm("Are you sure");
 		var area = 3.14 * rad * rad;
-		alert("The Area of Circle is "+ area);
+		var circum = 2 * 3.14 * rad;
+		alert("The Area of Circle is "+ area 
+			+"\nThe Circumference of Circle is "+ circum);
 	</script>
 </head>
 
