--- a/SEM-05-PHP/html & js/html-03.html
+++ b/SEM-05-PHP/html & js/html-03.html
@@ -7,8 +7,6 @@ A web page with many images can take a long time to load
 Using image sprites will reduce the number of 
 	server requests and save bandwidth.
 
-The original image can be found in path ./img/css-sprite.png
-The parts of this image is then used here using css sprite property
  -->
 
 <!DOCTYPE html>
@@ -21,29 +19,38 @@ The parts of this image is then used here using css sprite property
 			#first {
 				width: 192px;
 				height: 192px;
-				background: url(./img/css-sprite.png) -384px -384px;
+				background: url(
+					https://nucleoapp.com/assets/img/premium-icons/colored_48px_social-media.png
+					) -384px -384px;
 			}
 			#second {
 				width: 192px;
 				height: 192px;
-				background: url(./img/css-sprite.png) 0 -384px;
+				background: url(
+					https://nucleoapp.com/assets/img/premium-icons/colored_48px_social-media.png
+					) 0 -384px;
 			}
 			#third {
 				width: 192px;
 				height: 192px;
-				background: url(./img/css-sprite.png) -384px 384px;
+				background: url(
+					https://nucleoapp.com/assets/img/premium-icons/colored_48px_social-media.png
+				) -384px 384px;
 			}
 		</style>
 	</head>
 
 	<body>
 		<div class="container" align="center">
-
 			<h1>CSS Image Sprite</h1>
 
 			<p id="first"  width="1" height="1"></p>
 			<p id="second" width="1" height="1"></p>
 			<p id="third"  width="1" height="1"></p>
+			<br>
+			<a href="https://nucleoapp.com/assets/img/premium-icons/colored_48px_social-media.png">
+				Original Image
+			</a>
 		</div>
 
 	</body>
