--- a/SEM-05-PHP/html_css_js/js-02.html
+++ b/SEM-05-PHP/html_css_js/js-02.html
@@ -1,4 +1,4 @@
-<!-- Background color using javascript events -->
+<!-- Color palette using javascript events -->
 
 <!DOCTYPE html>
 <html lang="en">
