Added 04 & 05 and rearranged files

--- a/SEM-05-PHP/html_css_js/html-01.html
+++ b/SEM-05-PHP/html_css_js/html-01.html
@@ -1,44 +1,24 @@
-<!-- Slider, Datalist & Output tags -->
+<!-- Form Elements: text input, submit & reset buttons -->
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Form</title>
-	<style>
-		#slider{
-			outline: none;
-		}
-	</style>
+	<title>Form Elements</title>
+	<link href="./assets/css/html-01.css" rel="stylesheet">
 </head>
 <body>
-	<form>
-		<h2>Your Name is : </h2>
-		<input type="text" name="name" placeholder="Name" list="fav"><br>
-
-		<!-- Slider -->
-		<h2>Your Age is : </h2>
-		<input type="range" id="slider" oninput="age.value = parseInt(slider.value)">
-
-		<!-- Output Tag -->
-		<output name="age" for="slider"></output>
-		<!-- <input type="number" name="age"> -->
-		<br>
-
-		<h2>Your Favorite Player is</h2>
-		<input type="text" name="fav-player" list="fav">
-		
-		<!-- DataList Tag -->
-		<datalist id="fav">
-			<option>Sasi</option>
-			<option>Soman</option>
-			<option>Cassie</option>
-			<option>John</option>
-			<option>David</option>
-			<option>Susan</option>
-		</datalist>
-	</form>
+	<div align="center">
+		<h2>HTML Form Elements</h2>
+		<form>
+			<input type="text" id="user-name" placeholder="User name">
+			<br>
+			<input type="password" id="password" placeholder="Password">
+			<br>
+			<textarea rows="5" cols="20" placeholder="Address"></textarea>
+			<br>
+			<input type="submit" value="Submit">
+			<input type="reset" value="Reset">
+		</form>
+	</div>
 </body>
 </html>
