Fixed a minor bug

--- a/SEM-05-PHP/html_css_js/js-04.html
+++ b/SEM-05-PHP/html_css_js/js-04.html
@@ -12,7 +12,7 @@
 		else{
 			var flag = 0;
 			for (var i=2; i<=num/2; i++){
-				if (num % 2 == 0){
+				if (num % i == 0){
 					flag++;
 					break;
 				}
